--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-commerce-community",
+  "name": "e-commerce-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,24 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.6.1",
-    "autoprefixer": "10.4.15",
-    "next": "15.2.3",
-    "postcss": "8.4.29",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-hot-toast": "^2.4.1",
-    "react-range-slider-input": "^3.0.7",
-    "react-redux": "^9.2.0",
-    "swiper": "^10.2.0",
-    "tailwindcss": "3.3.3"
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
+    "@reduxjs/toolkit": "^2.0.1",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
-    "@types/node": "20.6.2",
-    "@types/react": "19.0.12",
-    "@types/react-dom": "19.0.4",
-    "eslint": "8.49.0",
-    "eslint-config-next": "15.2.3",
-    "typescript": "5.2.2"
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "typescript": "^5.3.3"
   }
 }
